--- a/templates/data/selectTheme.tmpl
+++ b/templates/data/selectTheme.tmpl
@@ -3,13 +3,15 @@
   <div class="dropdown">
     <form action="">
       <select class="selectTheme"
-               name="theme">
+               name="theme"
+              title="select a theme">
         <option value="">select theme</option>
         {{ range .Style.Available -}}
         <option value="{{ . }}">{{ . }}</option>
         {{ end }}
       </select>
       <button class="selectTheme"
+              title="apply selected theme"
                type="submit">apply theme</button>
     </form>
   </div>
